updating + adding proceeding and deadlines

--- a/accomodation/index.html
+++ b/accomodation/index.html
@@ -50,9 +50,14 @@
             <td class="navigation">
                 <a title="Sponsors" href="sponsors">Sponsors</a>
             </td>
-
+            <td class="navigation">
+                <a title="Proceeding" href="proceeding">Proceeding</a>
+            </td>
             <td class="navigation">
                 <a title="SOC&LOC" href="socandloc">SOC&LOC</a>
+            </td>
+            <td class="navigation">
+                <a title="Deadlines" href="deadlines">Deadlines</a>
             </td>
         </tr>
     </table>
@@ -70,7 +75,7 @@
 <p>For the application of special rates reserved to the workshop quote "Mid-Term LNF" in your reservation. Rates are per night, per room and inclusive of breakfast and VAT, excluding € 2 per day for city tax.</p>
 
 
-<p><b>Hotel rates will be determined soon</b></p>
+<p><b>Hotel rates are being determined and will be updated soon</b></p>
 <style type="text/css">
 .tg  {border-collapse:collapse;border-spacing:0;}
 .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
@@ -94,13 +99,23 @@
     <td class="tg-c3ow"></td>
   </tr>
   <tr>
-    <td class="tg-c3ow"><a href="http://www.cacciani.it/hotel/">Hotel Cacciani</a> ***<br>Via A. Diaz, 15 - Frascati<br>Tel. +39-06-9401 991<br>Fax +39-06-9420 440<br>e-mail: <a href="mailto:hotel@cacciani.it" target="_blank" rel="noopener noreferrer">hotel@cacciani.it</a><br></td>
-    <td class="tg-c3ow"><br><br><br><b>TBA</b> EUR</td>
+    <td class="tg-c3ow"><a href="http://www.cacciani.it/hotel/">Hotel Cacciani</a> ***<br>Via A. Diaz, 15 - Frascati<br>Tel. +39-06-9401 991<br>e-mail: <a href="mailto:hotel@cacciani.it" target="_blank" rel="noopener noreferrer">hotel@cacciani.it</a><br></td>
+    <td class="tg-c3ow"><br><br><br><b>85,00</b> EUR</td>
+    <td class="tg-c3ow"><br><br><br><b>95,00</b> EUR</td>
+  </tr>
+  <tr>
+    <td class="tg-c3ow"><a href="http://www.villamercede.com/" target="_blank" rel="noopener noreferrer">Hotel Villa Mercede</a> ****<br>Via Tuscolana, 20 - Frascati<br>Tel. +39-06-942 4760<br>e-mail: <a href="mailto:mail@villamercede.com" target="_blank" rel="noopener noreferrer">mail@villamercede.com</a><br></td>
+    <td class="tg-c3ow"><br><br><br><b>90,00</b> EUR</td>
     <td class="tg-c3ow"><br><br><br><b>TBA</b> EUR</td>
   </tr>
   <tr>
-    <td class="tg-c3ow"><a href="http://www.villamercede.com/" target="_blank" rel="noopener noreferrer">Hotel Villa Mercede</a> ****<br>Via Tuscolana, 20 - Frascati<br>Tel. +39-06-942 4760<br>Fax +39-06-941 6461<br>e-mail: <a href="mailto:mail@villamercede.com" target="_blank" rel="noopener noreferrer">mail@villamercede.com</a><br></td>
-    <td class="tg-c3ow"><br><br><br><b>TBA</b> EUR</td>
+    <td class="tg-c3ow"><a href="https://www.hotel-flora.it/en/" target="_blank" rel="noopener noreferrer">Hotel Flora</a> ****<br>Viale Vittorio Veneto, 8 - Frascati<br>Tel. +39-06-941 6110<br>e-mail: <a href="mailto:mail@villamercede.com" target="_blank" rel="noopener noreferrer">info@hotel-flora.it</a><br></td>
+    <td class="tg-c3ow"><br><br><br><b>113,00</b> EUR</td>
+    <td class="tg-c3ow"><br><br><br><b>125,00</b> EUR</td>
+  </tr>
+  <tr>
+    <td class="tg-c3ow"><a href="https://www.residenceanticacolonia.it/" target="_blank" rel="noopener noreferrer">Residence Antica Colonia</a> <br>Via C. Montani, 5 - Frascati<br>Tel. +39-06-9401 8061<br>e-mail: <a href="mailto:mail@villamercede.com" target="_blank" rel="noopener noreferrer">info@residenceanticacolonia.it</a><br></td>
+    <td class="tg-c3ow"><br><br><br><b>85,00</b> EUR</td>
     <td class="tg-c3ow"><br><br><br><b>TBA</b> EUR</td>
   </tr>
 </tbody>
@@ -108,6 +123,10 @@
 
 <p>Alternatively, an extended list of hotels around Frascati can be found <a href="http://w3.lnf.infn.it/accommodations/?lang=en">here</a>.</p>
 
+<p><b>LNF Guesthouse</b></p>
+<p>We also have a limited number of rooms in the LNF Guesthouse, if you want to make a reservation please contact <a href="mailto:alessandra.tamborrino.orsini@lnf.infn.it">Alessandra</a></p>
+
+<p><b>Staying in Rome</b></p>
 <p>For participants wishing to stay in Rome we can suggest a few hotels near the Termini Station:</p>
 <p>
 - <a href="http://www.hotellaurentia.com/">Laurentia Hotel</a>
