--- a/deadlines/index.html
+++ b/deadlines/index.html
@@ -25,7 +25,7 @@
         </div>
     </div>
 
-       <table class="navigation">
+        <table class="navigation">
         <tr>
             <td class="navigation">
                 <a title="Conference Home Page" href=".">Home</a>
@@ -54,41 +54,59 @@
                 <a title="Proceeding" href="proceeding">Proceeding</a>
             </td>
             <td class="navigation">
-                <a class="current" title="SOC&LOC" href="socandloc">SOC&LOC</a>
+                <a title="SOC&LOC" href="socandloc">SOC&LOC</a>
             </td>
             <td class="navigation">
-                <a title="Deadlines" href="deadlines">Deadlines</a>
+                <a class="current" title="Deadlines" href="deadlines">Deadlines</a>
             </td>
         </tr>
     </table>
-<!-- <p>
- <img src="assets/qrcode_hpxm23.jpg">
-</p>
- -->
-<h2>Scientific Organizing Committee (SOC) </h2>
-    <p>
-        Leonardo Abbene <i>(Dipartimento di Fisica e Chimica, Università degli Studi di Palermo, IT</i>)<br>
-        Antonella Balerna <i>(Laboratori Nazionali di Frascati INFN, IT)</i><br>
-        Roberto Bedogni <i>(Laboratori Nazionali di Frascati, INFN, IT)</i><br>
-        Anna Bergamaschi <i>(Paul Scherrer Institute, CH)</i> <br>
-        Davide Bleiner <i>(Swiss Federal Institute of Materials Science & Technology (Empa), CH)</i> <br>
-        Antonino Buttacavoli <i>(Dipartimento di Fisica e Chimica, Università degli Studi di Palermo, IT)</i><br>
-        Sultan Dabagov <i>(Laboratori Nazionali di Frascati, INFN, IT)</i><br>
-        Massimo Ferrario <i>(Laboratori Nazionali di Frascati, INFN, IT)</i><br>
-        Carlo Fiorini <i>(Politecnico di Milano and INFN, IT)</i><br>
-    Michael Lerch <i>(Center for Medical Radiation Physics, University of Wollongong, AU)</i> <br>
-        Andrea Zappettini <i>(Director of IMEM-CNR, IT)</i> <br>
-    </p>
 
-<h2>Local Organizing Committee (LOC)</h2>
-    <p>
-        Simone Manti <br>
-        Marco Miliucci <br>
-        Luca de Paolis <br>
-        Francesco Sgaramella <br>
-    </p>
+<p><b>Important deadlines to keep in mind:</b></p>
+<style type="text/css">
+.tg  {border-collapse:collapse;border-spacing:0;}
+.tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+  overflow:hidden;padding:5px 5px;word-break:normal;}
+.tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+  font-weight:normal;overflow:hidden;padding:-10px -15px;word-break:normal;}
+.tg .tg-c3ow{border-color:inherit;text-align:center;vertical-align:top}
+</style>
+<table class="tg" style="width: 50%">
+<thead>
+  <tr>
+    <th class="tg-c3ow">What</th>
+    <th class="tg-c3ow">Deadline</th>
 
+</thead>
+<tbody>
+  <tr>
+    <td class="tg-c3ow"></td>
+    <td class="tg-c3ow"></td>
+  </tr>
+  <tr>
+    <td class="tg-c3ow">Early bird Fee payment</td>
+    <td class="tg-c3ow">09/04/2023</td>
+  </tr>
+    <tr>
+    <td class="tg-c3ow">Abstract submission</td>
+    <td class="tg-c3ow">15/05/2023</td>
+  </tr>
+  <tr>
+    <td class="tg-c3ow">Late Fee payment</td>
+    <td class="tg-c3ow">01/06/2023 </td>
+  </tr>
+  <tr>
+    <td class="tg-c3ow">Registration</td>
+    <td class="tg-c3ow">11/06/2023 </td>
+  </tr>
+  <tr>
+    <td class="tg-c3ow">Proceeding submission</td>
+    <td class="tg-c3ow">15/10/2023</td>
+  </tr>
+</tbody>
+</table>
 
+<p><b>If you have troubles with any of the steps let us know!</b></p>
     <footer>
         &copy; Conference Organizers
         <!-- &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a> -->
