--- a/proceeding/index.html
+++ b/proceeding/index.html
@@ -9,15 +9,15 @@
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Accomodation | Conference Template</title>
+    <title>Registration | Conference Template</title>
 </head>
-    
+
 <body>
 
     <div class="banner">
         <img src="assets/banner.jpg" width="1000" alt="Frascati">
         <div class="top-left">
-            <span class="title1">High Precision X-Ray Measurements 2023</span><span class="title2"></span> 
+            <span class="title1">High Precision X-Ray Measurements 2023</span><span class="title2"></span>
             <!-- <span class="year">HPXM2023</span> -->
         </div>
         <div class="bottom-right">
@@ -25,7 +25,7 @@
         </div>
     </div>
 
-       <table class="navigation">
+        <table class="navigation">
         <tr>
             <td class="navigation">
                 <a title="Conference Home Page" href=".">Home</a>
@@ -51,42 +51,28 @@
                 <a title="Sponsors" href="sponsors">Sponsors</a>
             </td>
             <td class="navigation">
-                <a title="Proceeding" href="proceeding">Proceeding</a>
+                <a class="current" title="Proceeding" href="proceeding">Proceeding</a>
             </td>
             <td class="navigation">
-                <a class="current" title="SOC&LOC" href="socandloc">SOC&LOC</a>
+                <a title="SOC&LOC" href="socandloc">SOC&LOC</a>
             </td>
             <td class="navigation">
                 <a title="Deadlines" href="deadlines">Deadlines</a>
             </td>
         </tr>
     </table>
-<!-- <p>
- <img src="assets/qrcode_hpxm23.jpg">
-</p>
- -->
-<h2>Scientific Organizing Committee (SOC) </h2>
-    <p>
-        Leonardo Abbene <i>(Dipartimento di Fisica e Chimica, Università degli Studi di Palermo, IT</i>)<br>
-        Antonella Balerna <i>(Laboratori Nazionali di Frascati INFN, IT)</i><br>
-        Roberto Bedogni <i>(Laboratori Nazionali di Frascati, INFN, IT)</i><br>
-        Anna Bergamaschi <i>(Paul Scherrer Institute, CH)</i> <br>
-        Davide Bleiner <i>(Swiss Federal Institute of Materials Science & Technology (Empa), CH)</i> <br>
-        Antonino Buttacavoli <i>(Dipartimento di Fisica e Chimica, Università degli Studi di Palermo, IT)</i><br>
-        Sultan Dabagov <i>(Laboratori Nazionali di Frascati, INFN, IT)</i><br>
-        Massimo Ferrario <i>(Laboratori Nazionali di Frascati, INFN, IT)</i><br>
-        Carlo Fiorini <i>(Politecnico di Milano and INFN, IT)</i><br>
-    Michael Lerch <i>(Center for Medical Radiation Physics, University of Wollongong, AU)</i> <br>
-        Andrea Zappettini <i>(Director of IMEM-CNR, IT)</i> <br>
-    </p>
 
-<h2>Local Organizing Committee (LOC)</h2>
-    <p>
-        Simone Manti <br>
-        Marco Miliucci <br>
-        Luca de Paolis <br>
-        Francesco Sgaramella <br>
-    </p>
+
+</font>    
+    <!--
+    <iframe class="registration" src="EMBED LINK FOR GOOGLE FORM HERE"></iframe>
+    -->
+    <h2>Conference Proceeding</h2>
+    <p>Special Issue "High Precision X-ray Measurements 2023"</p>
+    <p>The conference proceedings will be published in the Open Access format on the special issue of Condensed Matter (ISSN 2410-3896). This special issue belongs to the section "Spectroscopy and Imaging in Condensed Matter"</p>
+    <p>Additional information as well as instruction for the submission are detailed <a href="https://www.mdpi.com/journal/condensedmatter/special_issues/KK44IS0QLS">on the mdpi website</a>.</p>
+    <br>
+    <p><b>Submission Deadline: 15/10/2023</b></p>
 
 
     <footer>
