--- a/index.html
+++ b/index.html
@@ -50,9 +50,14 @@
             <td class="navigation">
                 <a title="Sponsors" href="sponsors">Sponsors</a>
             </td>
-
+            <td class="navigation">
+                <a title="Proceeding" href="proceeding">Proceeding</a>
+            </td>
             <td class="navigation">
                 <a title="SOC&LOC" href="socandloc">SOC&LOC</a>
+            </td>
+            <td class="navigation">
+                <a title="Deadlines" href="deadlines">Deadlines</a>
             </td>
         </tr>
     </table>
