--- a/registration/index.html
+++ b/registration/index.html
@@ -50,9 +50,14 @@
             <td class="navigation">
                 <a title="Sponsors" href="sponsors">Sponsors</a>
             </td>
-
+            <td class="navigation">
+                <a title="Proceeding" href="proceeding">Proceeding</a>
+            </td>
             <td class="navigation">
                 <a title="SOC&LOC" href="socandloc">SOC&LOC</a>
+            </td>
+            <td class="navigation">
+                <a title="Deadlines" href="deadlines">Deadlines</a>
             </td>
         </tr>
     </table>
@@ -60,23 +65,33 @@
     <br>
 
     <p>
-        Registration can be done on the HPXM2023 indico website
-        <a href="https://agenda.infn.it/event/34523/">https://agenda.infn.it/event/34523/</a>
+        Registration can be done on the HPXM2023 
+        <a href="https://agenda.infn.it/event/34523/registrations/3536/">indico website</a>.<br><br>
 
     </p>
+    <h2>Call for abstract</h2>
+    <p>
+        It is possible to submit an abstract for a contribution <a href="https://agenda.infn.it/event/34523/abstracts/">here</a>. <br>
+        <b>Abstract submission deadline: 14/05</b>
+    </p>
+
     <h2>Conference Fee</h2>
 
 
 
 <p>The fee must be paid in Euro (&euro;) to the Istituto Nazionale di Fisica Nucleare - Laboratori Nazionali di Frascati by bank transfer or credit card (and by &quot;storno&quot;, for INFN participants only).</p>
 
-<!-- <p><b> Participants: 100,00 &euro; (*)</b></p> -->
-<p><b> Participants: TBA &euro; (*)</b></p>
+<p><b>Early Bird fee (until to 09/04)</b></p>
+<p> Participants: 150,00 &euro; (*)</p>
+<p> Students: 100,00 &euro; (*)</p>
 
-<!-- <p> <b>Ph.D Students and young fellowships: 50,00 &euro; (*)</b></p> -->
-<p> <b>Ph.D Students and young fellowships: TBA &euro; (*)</b></p>
 
-<p>(*) VAT included (22%). The fee covers the coffee breaks and the social dinner.   </p>
+<p><b>Late fee (from 10/04 to 11/06)</b></p>
+<p> Participants: 150,00 &euro; (*)</p>
+<p> Students: 100,00 &euro; (*)</p>
+
+
+<p>(*) VAT included (22%). The fee covers workshop material, proceedings published in Open Access on Condensed Matter, coffee breaks, lunches and social events. </p>
 
 <p><b>More info to follow</b></p>
 <font style="font-size:0px">
