added mdpi logo

--- a/proceeding/index.html
+++ b/proceeding/index.html
@@ -68,6 +68,7 @@
     <iframe class="registration" src="EMBED LINK FOR GOOGLE FORM HERE"></iframe>
     -->
     <h2>Conference Proceeding</h2>
+    <p><img src="assets/mdpi_logo.png" alt="MDPI" style="width: 30%"></p>
     <p>Special Issue "High Precision X-ray Measurements 2023"</p>
     <p>The conference proceedings will be published in the Open Access format on the special issue of Condensed Matter (ISSN 2410-3896). This special issue belongs to the section "Spectroscopy and Imaging in Condensed Matter"</p>
     <p>Additional information as well as instruction for the submission are detailed <a href="https://www.mdpi.com/journal/condensedmatter/special_issues/KK44IS0QLS">on the mdpi website</a>.</p>
