--- a/accomodation/index.html
+++ b/accomodation/index.html
@@ -68,11 +68,13 @@
 <p>Frascati offers several accommodation solutions in the town center or close to LNF. In particular, hotel Antica Colonia is within walking distance from LNF, while the hotels Villa Mercede and Cacciani provide a shuttle bus service to and from the LNF.</p>
 <p>Otherwise, participants may choose a hotel downtown Rome, nearby the Termini Railway Station and reach the LNF by train getting off at Tor Vergata Station (the journey takes about 20 minutes; see "How to get here" for more information).</p>
 
-<p>Participants are kindly invited to take care of their own accommodation.</p>
+<p>HOTEL RESERVATIONS:
 
-<p>We have booked a block of rooms in the Frascati hotels Villa Mercede (20) and Cacciani (12); this reservation will expire on May 15th. </p>
+IMPORTANT: <b>Participants are invited to take care of their own reservation,</b><br>
 
-<p>For the application of special rates reserved to the workshop quote "Mid-Term LNF" in your reservation. Rates are per night, per room and inclusive of breakfast and VAT, excluding € 2 per day for city tax.</p>
+which should be done by quoting the workshop: <b>LNF - HPXM 2023</b> in order to have the reserved workshop rates. <br><br>
+
+Attention: DO NOT USE the online reservation form on the web page of the hotel booking web sites, since in this case won't be applied the reduced workshop rates.</p>
 
 
 <p><b>Hotel rates are being determined and will be updated soon</b></p>
