--- a/deadlines/index.html
+++ b/deadlines/index.html
@@ -92,7 +92,7 @@
     <td class="tg-c3ow">15/05/2023</td>
   </tr>
   <tr>
-    <td class="tg-c3ow">Late Fee payment</td>
+    <td class="tg-c3ow">Fee payment</td>
     <td class="tg-c3ow">01/06/2023 </td>
   </tr>
   <tr>
