--- a/registration/index.html
+++ b/registration/index.html
@@ -81,12 +81,12 @@
 
 <p>The fee must be paid in Euro (&euro;) to the Istituto Nazionale di Fisica Nucleare - Laboratori Nazionali di Frascati by bank transfer or credit card (and by &quot;storno&quot;, for INFN participants only).</p>
 
-<p><b>Early Bird fee (until to 09/04)</b></p>
+<p><b>Early Bird Fee (until to 09/04)</b></p>
 <p> Participants: 150,00 &euro; (*)</p>
 <p> Students: 100,00 &euro; (*)</p>
 
 
-<p><b>Late fee (from 10/04 to 11/06)</b></p>
+<p><b>Standard Fee (from 10/04 to 11/06)</b></p>
 <p> Participants: 200,00 &euro; (*)</p>
 <p> Students: 150,00 &euro; (*)</p>
 
