--- a/socandloc/index.html
+++ b/socandloc/index.html
@@ -83,9 +83,9 @@
 <h2>Local Organizing Committee (LOC)</h2>
     <p>
         Simone Manti <br>
-        Marco Miliucci <br>
         Luca de Paolis <br>
         Francesco Sgaramella <br>
+        A. Tamborrino Orsini (secretariat) <br>
     </p>
 
 
