--- a/registration/index.html
+++ b/registration/index.html
@@ -86,7 +86,7 @@
 <p> Students: 100,00 &euro; (*)</p>
 
 
-<p><b>Standard Fee (from 10/04 to 11/06)</b></p>
+<p><b>Regular Fee (from 10/04 to 11/06)</b></p>
 <p> Participants: 200,00 &euro; (*)</p>
 <p> Students: 150,00 &euro; (*)</p>
 
