fix size inside pciture

--- a/proceeding/index.html
+++ b/proceeding/index.html
@@ -17,10 +17,10 @@
     <div class="banner">
         <img src="assets/banner.jpg" width="1000" alt="Frascati">
         <div class="top-left">
-            <span class="title1">High Precision X-Ray Measurements 2023</span><span class="title2"></span>
+            <span class="title1" style="font-size:38px">High Precision X-Ray Measurements 2023</span><span class="title2"></span>
             <!-- <span class="year">HPXM2023</span> -->
         </div>
-        <div class="bottom-right">
+        <div class="bottom-right" style="font-size:38px">
               Laboratori Nazionali di Frascati <br> 19-23 June 2023 @ Frascati, Italy
         </div>
     </div>
