--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -74,8 +74,10 @@
         <li>&bull; <a href="https://www.dectris.com/">Dectris</a></li>
 	<li>&bull; <a href="https://w3.lnf.infn.it/">INFN-LNF</a></li>
         <li>&bull; <a href="https://www.mdpi.com/">MDPI</a></li>
+        <li>&bull; <a href="">MITIQO project</a></li>
         <li>&bull; <a href="http://www.optigraph.eu/">Optigraph GmbH</a></li>
         <li>&bull; <a href="https://www.lucedisincrotrone.it/en/homepage/">SILS</a></li>
+        <li>&bull; <a href="https://www.lazioinnova.it">Regione Lazio - Lazio Innova</a></li>
 	<li>&bull; <a href="http://www.strong-2020.eu/">STRONG2020</a></li>
         <li>&bull; <a href="https://www.tesfluid.com/">Testfluid S.R.L.</a></li>
         <li>&bull; <a href="https://www.unipa.it/dipartimenti/difc">Università di Palermo</a></li>
@@ -108,9 +110,18 @@
             </td>
         </tr>
         <tr>
+            <td class="sponsor">
+                <a href=""><img src="assets/mitiqo.png"></a>
+            </td> 
+            <td class="sponsor">
+                <a href="https://www.lazioinnova.it"><img src="assets/lazioinnova.jpg"></a>
+            </td>
             <td class="sponsor" >
                 <a href="http://www.strong-2020.eu/"><img src="assets/logostrong.png" style="background: black"></a>
             </td>
+        </tr>
+        <tr>
+
             <td class="sponsor" >
                 <a href="https://www.tesfluid.com/"><img src="assets/logo-tesfluid-300.png"></a>
             </td>
