removing daily lecture

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <p>
         In the wake of the success of the 2018 and 2021 editions, HPXM2023 is planned with the twofold aim to consolidate the existing interconnections between the research teams and foster creating new ones, offering the opportunity for all the participants to discuss and share the results of their activities focusing on a common protagonist: <b>X-ray precision detection</b>.
     </p>
-    <p><i>Daily Opening Lectures by Anna Kätker (Deutsches Röntgen Museum)</i>.</p>
+    <!-- <p><i>Daily Opening Lectures by Anna Kätker (Deutsches Röntgen Museum)</i>.</p> -->
 
     <p>
         The <b>scientific goal</b> of this conference is to inform the participants on the most recent developments in X-ray detection technologies and their impacts in various sectors like nuclear physics, astrophysics, quantum physics, exotic atoms, medical physics, biology, cultural heritage and agrifood.
