--- a/accomodation/index.html
+++ b/accomodation/index.html
@@ -17,11 +17,11 @@
     <div class="banner">
         <img src="assets/banner.jpg" width="1000" alt="Frascati">
         <div class="top-left">
-            <span class="title1" style="font-size:38px">High Precision X-Ray Measurements 2023</span><span class="title2"></span> 
-            <!-- <span class="year">HPXM2023</span> -->
+            <span class="title1" style="font-size:38px">High Precision X-Ray Measurements 2025</span><span class="title2"></span> 
+            <!-- <span class="year">HPXM2025</span> -->
         </div>
         <div class="bottom-right" style="font-size:38px">
-              Laboratori Nazionali di Frascati <br> 19-23 June 2023 @ Frascati, Italy
+              Laboratori Nazionali di Frascati <br> TBA 2025 @ Frascati, Italy
         </div>
     </div>
 
@@ -65,14 +65,15 @@
  <img src="assets/qrcode_hpxm23.jpg">
 </p>
  -->
-<p>Frascati offers several accommodation solutions in the town center or close to LNF. In particular, hotel Antica Colonia is within walking distance from LNF, while the hotels Villa Mercede and Cacciani provide a shuttle bus service to and from the LNF.</p>
+<h1>TBA</h1>
+<!-- <p>Frascati offers several accommodation solutions in the town center or close to LNF. In particular, hotel Antica Colonia is within walking distance from LNF, while the hotels Villa Mercede and Cacciani provide a shuttle bus service to and from the LNF.</p>
 <p>Otherwise, participants may choose a hotel downtown Rome, nearby the Termini Railway Station and reach the LNF by train getting off at Tor Vergata Station (the journey takes about 20 minutes; see "How to get here" for more information).</p>
 
 <p>HOTEL RESERVATIONS:
 
 IMPORTANT: <b>Participants are invited to take care of their own reservation,</b><br>
 
-which should be done by quoting the workshop: <b>LNF - HPXM 2023</b> in order to have the reserved workshop rates. <br><br>
+which should be done by quoting the workshop: <b>LNF - HPXM 2025</b> in order to have the reserved workshop rates. <br><br>
 
 Attention: DO NOT USE the online reservation form on the web page of the hotel booking web sites, since in this case won't be applied the reduced workshop rates.</p>
 
@@ -126,7 +127,7 @@ Attention: DO NOT USE the online reservation form on the web page of the hotel b
 <p>Alternatively, an extended list of hotels around Frascati can be found <a href="http://w3.lnf.infn.it/accommodations/?lang=en">here</a>.</p>
 
 <p><b>LNF Guesthouse</b></p>
-<p>We also have a limited number of rooms in the LNF Guesthouse, if you want to make a reservation please contact <a href="mailto:alessandra.tamborrino.orsini@lnf.infn.it">Alessandra</a></p>
+<p>We also have a limited number of rooms in the LNF Guesthouse, if you want to make a reservation please contact <a href="mailto:alessandra.tamborrino.orsini@lnf.infn.it">Alessandra</a></p> -->
 
 <p><b>Staying in Rome</b></p>
 <p>For participants wishing to stay in Rome we can suggest a few hotels near the Termini Station:</p>
