--- a/proceeding/index.html
+++ b/proceeding/index.html
@@ -17,11 +17,11 @@
     <div class="banner">
         <img src="assets/banner.jpg" width="1000" alt="Frascati">
         <div class="top-left">
-            <span class="title1" style="font-size:38px">High Precision X-Ray Measurements 2023</span><span class="title2"></span>
-            <!-- <span class="year">HPXM2023</span> -->
+            <span class="title1" style="font-size:38px">High Precision X-Ray Measurements 2025</span><span class="title2"></span>
+            <!-- <span class="year">HPXM2025</span> -->
         </div>
         <div class="bottom-right" style="font-size:38px">
-              Laboratori Nazionali di Frascati <br> 19-23 June 2023 @ Frascati, Italy
+              Laboratori Nazionali di Frascati <br> TBA 2025 @ Frascati, Italy
         </div>
     </div>
 
@@ -61,25 +61,24 @@
             </td>
         </tr>
     </table>
-
-
 </font>    
     <!--
     <iframe class="registration" src="EMBED LINK FOR GOOGLE FORM HERE"></iframe>
     -->
-    <h2>Conference Proceeding</h2>
+    <h2>TBA</h2>
+    <!-- <h2>Conference Proceeding</h2>
     <p><img src="assets/mdpi_logo.png" alt="MDPI" style="width: 30%"></p>
-    <p>Special Issue "High Precision X-ray Measurements 2023"</p>
+    <p>Special Issue "High Precision X-ray Measurements 2025"</p>
     <p>The conference proceedings will be published in the Open Access format on the special issue of Condensed Matter (ISSN 2410-3896). This special issue belongs to the section "Spectroscopy and Imaging in Condensed Matter"</p>
     <p>Additional information as well as instruction for the submission are detailed <a href="https://www.mdpi.com/journal/condensedmatter/special_issues/KK44IS0QLS">on the mdpi website</a>.</p>
     <br>
-    <p><b>Submission Deadline: 15/10/2023</b></p>
+    <p><b>Submission Deadline: 15/10/2025</b></p>
 
 
     <footer>
         &copy; Conference Organizers
         <!-- &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a> -->
-    </footer>
+    </footer> -->
 
 </body>
 </html>
