--- a/program/index.html
+++ b/program/index.html
@@ -20,11 +20,11 @@
     <div class="banner">
         <img src="assets/banner.jpg" width="1000" alt="Frascati">
         <div class="top-left">
-            <span class="title1" style="font-size:38px">High Precision X-Ray Measurements 2023</span><span class="title2"></span> 
-            <!-- <span class="year">HPXM2023</span> -->
+            <span class="title1" style="font-size:38px">High Precision X-Ray Measurements 2025</span><span class="title2"></span> 
+            <!-- <span class="year">HPXM2025</span> -->
         </div>
         <div class="bottom-right" style="font-size:38px">
-              Laboratori Nazionali di Frascati <br> 19-23 June 2023 @ Frascati, Italy
+              Laboratori Nazionali di Frascati <br> TBA 2025 @ Frascati, Italy
         </div>
     </div>
 
@@ -65,11 +65,12 @@
         </tr>
     </table>
 
-    <h2>Conference Program</h2>
-    <p>The program is available on the conference website
+    <h2>TBA</h2>
+    <!-- <h2>Conference Program</h2> -->
+    <!-- <p>The program is available on the conference website
         <a href="https://agenda.infn.it/event/34523/">https://agenda.infn.it/event/34523/</a>
     </p>
-    <iframe class="programme" src="https://agenda.infn.it/event/34523/timetable/?view=standard"></iframe>
+    <iframe class="programme" src="https://agenda.infn.it/event/34523/timetable/?view=standard"></iframe> -->
 
 <!-- 
     <table class="plenary">
