--- a/registration/index.html
+++ b/registration/index.html
@@ -17,11 +17,11 @@
     <div class="banner">
         <img src="assets/banner.jpg" width="1000" alt="Frascati">
         <div class="top-left">
-            <span class="title1" style="font-size:38px">High Precision X-Ray Measurements 2023</span><span class="title2"></span>
-            <!-- <span class="year">HPXM2023</span> -->
+            <span class="title1" style="font-size:38px">High Precision X-Ray Measurements 2025</span><span class="title2"></span>
+            <!-- <span class="year">HPXM2025</span> -->
         </div>
         <div class="bottom-right" style="font-size:38px">
-              Laboratori Nazionali di Frascati <br> 19-23 June 2023 @ Frascati, Italy
+              Laboratori Nazionali di Frascati <br> TBA 2025 @ Frascati, Italy
         </div>
     </div>
 
@@ -65,20 +65,20 @@
     <br>
 
     <p>
-        Registration can be done on the HPXM2023 
+        Registration can be done on the HPXM2025 
         <a href="https://agenda.infn.it/event/34523/registrations/3536/">indico website</a>.<br><br>
 
     </p>
-    <h2>Call for abstract</h2>
+    <h2>Call for abstract: TBA</h2>
     <p>
-        It is possible to submit an abstract for a contribution <a href="https://agenda.infn.it/event/34523/abstracts/">here</a>. <br>
-        <b>Abstract submission deadline: 14/05</b>
+        <!-- It is possible to submit an abstract for a contribution <a href="https://agenda.infn.it/event/34523/abstracts/">here</a>. <br> -->
+        <!-- <b>Abstract submission deadline: 14/05</b> -->
     </p>
 
-    <h2>Conference Fee</h2>
+    <h2>Conference Fee: TBA</h2>
 
 
-
+<!-- 
 <p>The fee must be paid in Euro (&euro;) to the Istituto Nazionale di Fisica Nucleare - Laboratori Nazionali di Frascati by bank transfer or credit card (and by &quot;storno&quot;, for INFN participants only).</p>
 
 <p><b>Early Bird Fee (until to 09/04)</b></p>
@@ -114,7 +114,7 @@
 <p><b>Storno INFN (INFN participants only)</b></p>
 
 <p>The registration fee of INFN participants will be paid through an internal transfer among INFN sites. Other forms of payment will not be accepted. Further information can be obtained from the local INFN administrative offices.</p>
-</font>    
+</font>     -->
     <!--
     <iframe class="registration" src="EMBED LINK FOR GOOGLE FORM HERE"></iframe>
     -->
