--- a/socandloc/index.html
+++ b/socandloc/index.html
@@ -17,11 +17,11 @@
     <div class="banner">
         <img src="assets/banner.jpg" width="1000" alt="Frascati">
         <div class="top-left">
-            <span class="title1" style="font-size:38px">High Precision X-Ray Measurements 2023</span><span class="title2"></span> 
-            <!-- <span class="year">HPXM2023</span> -->
+            <span class="title1" style="font-size:38px">High Precision X-Ray Measurements 2025</span><span class="title2"></span> 
+            <!-- <span class="year">HPXM2025</span> -->
         </div>
         <div class="bottom-right" style="font-size:38px">
-              Laboratori Nazionali di Frascati <br> 19-23 June 2023 @ Frascati, Italy
+              Laboratori Nazionali di Frascati <br> TBA 2025 @ Frascati, Italy
         </div>
     </div>
 
@@ -69,20 +69,28 @@
     <p>
         Leonardo Abbene <i>(Dipartimento di Fisica e Chimica, Università degli Studi di Palermo, IT</i>)<br>
         Antonella Balerna <i>(Laboratori Nazionali di Frascati INFN, IT)</i><br>
-        Roberto Bedogni <i>(Laboratori Nazionali di Frascati, INFN, IT)</i><br>
-        Anna Bergamaschi <i>(Paul Scherrer Institute, CH)</i> <br>
-        Davide Bleiner <i>(Swiss Federal Institute of Materials Science & Technology (Empa), CH)</i> <br>
-        Antonino Buttacavoli <i>(Dipartimento di Fisica e Chimica, Università degli Studi di Palermo, IT)</i><br>
-        Sultan Dabagov <i>(Laboratori Nazionali di Frascati, INFN, IT)</i><br>
-        Massimo Ferrario <i>(Laboratori Nazionali di Frascati, INFN, IT)</i><br>
-        Carlo Fiorini <i>(Politecnico di Milano and INFN, IT)</i><br>
-    Michael Lerch <i>(Center for Medical Radiation Physics, University of Wollongong, AU)</i> <br>
-        Andrea Zappettini <i>(Director of IMEM-CNR, IT)</i> <br>
+        Damir Bosnar <i>(University of Zagreb, HR)</i><br>
+        Silvia Cipiccia <i>(University College London, UK)</i><br>
+        Fabrizio Napolitano <i>(Laboratori Nazionali di Frascati, INFN, IT)</i><br>
+        <!-- Roberto Bedogni <i>(Laboratori Nazionali di Frascati, INFN, IT)</i><br> -->
+        <!-- Anna Bergamaschi <i>(Paul Scherrer Institute, CH)</i> <br> -->
+        <!-- Davide Bleiner <i>(Swiss Federal Institute of Materials Science & Technology (Empa), CH)</i> <br> -->
+        <!-- Antonino Buttacavoli <i>(Dipartimento di Fisica e Chimica, Università degli Studi di Palermo, IT)</i><br> -->
+        <!-- Sultan Dabagov <i>(Laboratori Nazionali di Frascati, INFN, IT)</i><br> -->
+        <!-- Massimo Ferrario <i>(Laboratori Nazionali di Frascati, INFN, IT)</i><br> -->
+        <!-- Carlo Fiorini <i>(Politecnico di Milano and INFN, IT)</i><br> -->
+        <!-- Michael Lerch <i>(Center for Medical Radiation Physics, University of Wollongong, AU)</i> <br> -->
+        <!-- Andrea Zappettini <i>(Director of IMEM-CNR, IT)</i> <br> -->
+        Manuel Sanchez del Rio <i>(European Synchrotron Radiation Facility, FR)</i><br>
+        Magdalena Skurzok <i>(Jagiellonian University, PL)</i><br>
+        Ivana Tucakovic <i>(Ruđer Bošković Institute, HR)</i><br>
     </p>
 
 <h2>Local Organizing Committee (LOC)</h2>
     <p>
-        Simone Manti <br>
+        <!-- Simone Manti <br> -->
+        Francesco Artibani
+        Francesco Clozza
         Luca de Paolis <br>
         Francesco Sgaramella <br>
         A. Tamborrino Orsini (secretariat) <br>
