--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -17,11 +17,11 @@
     <div class="banner">
         <img src="assets/banner.jpg" width="1000" alt="Frascati">
         <div class="top-left">
-            <span class="title1" style="font-size:38px">High Precision X-Ray Measurements 2023</span><span class="title2"></span> 
-            <!-- <span class="year">HPXM2023</span> -->
+            <span class="title1" style="font-size:38px">High Precision X-Ray Measurements 2025</span><span class="title2"></span> 
+            <!-- <span class="year">HPXM2025</span> -->
         </div>
         <div class="bottom-right" style="font-size:38px">
-              Laboratori Nazionali di Frascati <br> 19-23 June 2023 @ Frascati, Italy
+              Laboratori Nazionali di Frascati <br> TBA 2025 @ Frascati, Italy
         </div>
     </div>
 
@@ -71,14 +71,14 @@
     <p>
     <ul style="list-style-type:disc; color: black">
         <li>&bull; <a href="https://www.caen.it/">CAEN S.p.a</a></li>
-        <li>&bull; <a href="https://www.dectris.com/">Dectris</a></li>
+        <!-- <li>&bull; <a href="https://www.dectris.com/">Dectris</a></li> -->
 	<li>&bull; <a href="https://w3.lnf.infn.it/">INFN-LNF</a></li>
-        <li>&bull; <a href="https://www.mdpi.com/">MDPI</a></li>
-        <li>&bull; <a href="">MITIQO project</a></li>
+        <!-- <li>&bull; <a href="https://www.mdpi.com/">MDPI</a></li> -->
+        <!-- <li>&bull; <a href="">MITIQO project</a></li> -->
         <li>&bull; <a href="http://www.optigraph.eu/">Optigraph GmbH</a></li>
-        <li>&bull; <a href="https://www.lucedisincrotrone.it/en/homepage/">SILS</a></li>
-        <li>&bull; <a href="https://www.lazioinnova.it">Regione Lazio - Lazio Innova</a></li>
-	<li>&bull; <a href="http://www.strong-2020.eu/">STRONG2020</a></li>
+        <!-- <li>&bull; <a href="https://www.lucedisincrotrone.it/en/homepage/">SILS</a></li> -->
+        <!-- <li>&bull; <a href="https://www.lazioinnova.it">Regione Lazio - Lazio Innova</a></li> -->
+	<!-- <li>&bull; <a href="http://www.strong-2020.eu/">STRONG2020</a></li> -->
         <li>&bull; <a href="https://www.tesfluid.com/">Testfluid S.R.L.</a></li>
         <li>&bull; <a href="https://www.unipa.it/dipartimenti/difc">Università di Palermo</a></li>
     </ul>
@@ -91,7 +91,7 @@
                 <a href="https://www.caen.it/"><img src="assets/logo-2-caen.png" style="background: red">
             </td>
             <td class="sponsor" >
-                <a href="https://www.dectris.com"><img src="assets/DectrisLogo.png" style=" width:100%"></a>
+                <!-- <a href="https://www.dectris.com"><img src="assets/DectrisLogo.png" style=" width:100%"></a> -->
             </td>
             <td class="sponsor" >
                 <a href="https://w3.lnf.infn.it/"><img src="assets/logo_infn_lnf_2_esteso.png" style="width: 150px"></a>
@@ -100,7 +100,7 @@
         </tr>
         <tr>
             <td class="sponsor">
-               <a href="https://www.mdpi.com/"> <img src="assets/mdpi_logo.png" alt="MDPI" style="width: 100%"> </a>
+               <!-- <a href="https://www.mdpi.com/"> <img src="assets/mdpi_logo.png" alt="MDPI" style="width: 100%"> </a> -->
             </td>
             <td class="sponsor" >
                 <a href="http://www.optigraph.eu/"><img src="assets/logo_optigraf.gif" style="background: black; width:100%"></a>
@@ -111,13 +111,13 @@
         </tr>
         <tr>
             <td class="sponsor">
-                <a href=""><img src="assets/mitiqo.png"></a>
+                <!-- <a href=""><img src="assets/mitiqo.png"></a> -->
             </td> 
             <td class="sponsor">
-                <a href="https://www.lazioinnova.it"><img src="assets/lazioinnova.jpg"></a>
+                <!-- <a href="https://www.lazioinnova.it"><img src="assets/lazioinnova.jpg"></a> -->
             </td>
             <td class="sponsor" >
-                <a href="http://www.strong-2020.eu/"><img src="assets/logostrong.png" style="background: black"></a>
+                <!-- <a href="http://www.strong-2020.eu/"><img src="assets/logostrong.png" style="background: black"></a> -->
             </td>
         </tr>
         <tr>
