--- a/deadlines/index.html
+++ b/deadlines/index.html
@@ -17,11 +17,11 @@
     <div class="banner">
         <img src="assets/banner.jpg" width="1000" alt="Frascati">
         <div class="top-left">
-            <span class="title1" style="font-size:38px">High Precision X-Ray Measurements 2023</span><span class="title2"></span> 
-            <!-- <span class="year">HPXM2023</span> -->
+            <span class="title1" style="font-size:38px">High Precision X-Ray Measurements 2025</span><span class="title2"></span> 
+            <!-- <span class="year">HPXM2025</span> -->
         </div>
         <div class="bottom-right" style="font-size:38px">
-              Laboratori Nazionali di Frascati <br> 19-23 June 2023 @ Frascati, Italy
+              Laboratori Nazionali di Frascati <br> TBA 2025 @ Frascati, Italy
         </div>
     </div>
 
@@ -61,8 +61,8 @@
             </td>
         </tr>
     </table>
-
-<p><b>Important deadlines to keep in mind:</b></p>
+<h1>Important deadlines: TBA</h1>
+<!-- <p><b>Important deadlines to keep in mind:</b></p>
 <style type="text/css">
 .tg  {border-collapse:collapse;border-spacing:0;}
 .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
@@ -85,32 +85,33 @@
   </tr>
   <tr>
     <td class="tg-c3ow">Early bird Fee payment</td>
-    <td class="tg-c3ow">09/04/2023</td>
+    <td class="tg-c3ow">09/04/2025</td>
   </tr>
     <tr>
     <td class="tg-c3ow">Abstract submission</td>
-    <td class="tg-c3ow">15/05/2023</td>
+    <td class="tg-c3ow">15/05/2025</td>
   </tr>
   <tr>
     <td class="tg-c3ow">Fee payment</td>
-    <td class="tg-c3ow">01/06/2023 </td>
+    <td class="tg-c3ow">01/06/2025 </td>
   </tr>
   <tr>
     <td class="tg-c3ow">Registration</td>
-    <td class="tg-c3ow">11/06/2023 </td>
+    <td class="tg-c3ow">11/06/2025 </td>
   </tr>
   <tr>
     <td class="tg-c3ow">Proceeding submission</td>
-    <td class="tg-c3ow">15/10/2023</td>
+    <td class="tg-c3ow">15/10/2025</td>
   </tr>
 </tbody>
 </table>
 
-<p><b>If you have troubles with any of the steps let us know!</b></p>
-    <footer>
-        &copy; Conference Organizers
-        <!-- &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a> -->
-    </footer>
+<p><b>If you have troubles with any of the steps let us know!</b></p> -->
+
+<footer>
+    &copy; Conference Organizers
+    <!-- &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a> -->
+</footer>
 
 </body>
 </html>
