--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>HPXM2023</title>
+    <title>HPXM2025</title>
 </head>
 
 <body>
@@ -17,11 +17,11 @@
     <div class="banner">
         <img src="assets/banner.jpg" width="1000" alt="Frascati">
         <div class="top-left">
-            <span class="title1" style="font-size:38px">High Precision X-Ray Measurements 2023</span><span class="title2"></span>
-             <!-- <span class="year">HPXM2023</span> -->
+            <span class="title1" style="font-size:38px">High Precision X-Ray Measurements 2025</span><span class="title2"></span>
+             <!-- <span class="year">HPXM2025</span> -->
         </div>
         <div class="bottom-right"style="font-size:38px">
-              Laboratori Nazionali di Frascati <br> 19-23 June 2023 @ Frascati, Italy
+              Laboratori Nazionali di Frascati <br> TBD @ Frascati, Italy
         </div>
     </div>
 
@@ -66,10 +66,10 @@
     <figcaption style="text-align: center"><a href="https://commons.wikimedia.org/wiki/File:Wilhelm_Conrad_Roentgen_looking_into_an_X-ray_screen_placed_Wellcome_L0027361.jpg">From Wikimedia</a></figcaption>
     </figure>
     <p>
-        <b>High Precision X-ray Measurements 2023</b> conference is the third edition of the HPXM conferences, held at the INFN Laboratories of <b>Frascati</b> in 2018 and 2021.
+        <b>High Precision X-ray Measurements 2025</b> conference is the fourth edition of the HPXM conferences, held at the INFN Laboratories of <b>Frascati</b> in 2018, 2021, <a href="https://hpxm2023.github.io/">2023</a>.
     </p>
     <p>
-        In the wake of the success of the 2018 and 2021 editions, HPXM2023 is planned with the twofold aim to consolidate the existing interconnections between the research teams and foster creating new ones, offering the opportunity for all the participants to discuss and share the results of their activities focusing on a common protagonist: <b>X-ray precision detection</b>.
+        In the wake of the success of the previous editions, HPXM2025 is planned with the twofold aim to consolidate the existing interconnections between the research teams and foster creating new ones, offering the opportunity for all the participants to discuss and share the results of their activities focusing on a common protagonist: <b>X-ray precision detection</b>.
     </p>
     <!-- <p><i>Daily Opening Lectures by Anna Kätker (Deutsches Röntgen Museum)</i>.</p> -->
 
@@ -94,7 +94,8 @@
     <h2>Conference Chairs</h2>
     <p>
         Alessandro Scordo (Laboratori Nazionali di Frascati INFN, IT)<br> 
-        Fabrizio Napolitano (Laboratori Nazionali di Frascati INFN, IT)<br>
+        Simone Manti (Laboratori Nazionali di Frascati INFN, IT)<br>
+        <!-- Fabrizio Napolitano (Laboratori Nazionali di Frascati INFN, IT)<br> -->
     </p>
 
 
