--- a/socandloc/index.html
+++ b/socandloc/index.html
@@ -69,12 +69,12 @@
     <p>
         Leonardo Abbene <i>(Dipartimento di Fisica e Chimica, Università degli Studi di Palermo, IT</i>)<br>
         Antonella Balerna <i>(Laboratori Nazionali di Frascati INFN, IT)</i><br>
+        Davide Bleiner <i>(Swiss Federal Institute of Materials Science & Technology (Empa), CH)</i> <br>
         Damir Bosnar <i>(University of Zagreb, HR)</i><br>
         Silvia Cipiccia <i>(University College London, UK)</i><br>
         Fabrizio Napolitano <i>(Laboratori Nazionali di Frascati, INFN, IT)</i><br>
         <!-- Roberto Bedogni <i>(Laboratori Nazionali di Frascati, INFN, IT)</i><br> -->
         <!-- Anna Bergamaschi <i>(Paul Scherrer Institute, CH)</i> <br> -->
-        <!-- Davide Bleiner <i>(Swiss Federal Institute of Materials Science & Technology (Empa), CH)</i> <br> -->
         <!-- Antonino Buttacavoli <i>(Dipartimento di Fisica e Chimica, Università degli Studi di Palermo, IT)</i><br> -->
         <!-- Sultan Dabagov <i>(Laboratori Nazionali di Frascati, INFN, IT)</i><br> -->
         <!-- Massimo Ferrario <i>(Laboratori Nazionali di Frascati, INFN, IT)</i><br> -->
