--- a/socandloc/index.html
+++ b/socandloc/index.html
@@ -72,6 +72,7 @@
         Davide Bleiner <i>(Swiss Federal Institute of Materials Science & Technology (Empa), CH)</i> <br>
         Damir Bosnar <i>(University of Zagreb, HR)</i><br>
         Silvia Cipiccia <i>(University College London, UK)</i><br>
+        Andreas Knecht <i>(Paul Scherrer Institute, CH)</i><br>
         Fabrizio Napolitano <i>(Laboratori Nazionali di Frascati, INFN, IT)</i><br>
         <!-- Roberto Bedogni <i>(Laboratori Nazionali di Frascati, INFN, IT)</i><br> -->
         <!-- Anna Bergamaschi <i>(Paul Scherrer Institute, CH)</i> <br> -->
