--- a/program/index.html
+++ b/program/index.html
@@ -65,12 +65,11 @@
         </tr>
     </table>
 
-    <h2>TBA</h2>
-    <!-- <h2>Conference Program</h2> -->
-    <!-- <p>The program is available on the conference website
-        <a href="https://agenda.infn.it/event/34523/">https://agenda.infn.it/event/34523/</a>
+    <h2>Conference Program, TBA</h2>
+    <p>The program is available on the conference website
+        <a href="https://agenda.infn.it/event/43727/">https://agenda.infn.it/event/43727/</a>
     </p>
-    <iframe class="programme" src="https://agenda.infn.it/event/34523/timetable/?view=standard"></iframe> -->
+    <iframe class="programme" src="https://agenda.infn.it/event/43727/timetable/?view=standard"></iframe>
 
 <!-- 
     <table class="plenary">
