--- a/socandloc/index.html
+++ b/socandloc/index.html
@@ -74,6 +74,7 @@
         Silvia Cipiccia <i>(University College London, UK)</i><br>
         Andreas Knecht <i>(Paul Scherrer Institute, CH)</i><br>
         Fabrizio Napolitano <i>(Laboratori Nazionali di Frascati, INFN, IT)</i><br>
+        Shunji Okada <i>RIKEN Cluster for Pioneering Research, Wako JP</i><br>
         <!-- Roberto Bedogni <i>(Laboratori Nazionali di Frascati, INFN, IT)</i><br> -->
         <!-- Anna Bergamaschi <i>(Paul Scherrer Institute, CH)</i> <br> -->
         <!-- Antonino Buttacavoli <i>(Dipartimento di Fisica e Chimica, Università degli Studi di Palermo, IT)</i><br> -->
