--- a/socandloc/index.html
+++ b/socandloc/index.html
@@ -68,6 +68,7 @@
 <h2>Scientific Organizing Committee (SOC) </h2>
     <p>
         Leonardo Abbene <i>(Dipartimento di Fisica e Chimica, Università degli Studi di Palermo, IT</i>)<br>
+        Maria Pia Anania <i>(Laboratori Nazionali di Frascati INFN, IT)</i><br>
         Antonella Balerna <i>(Laboratori Nazionali di Frascati INFN, IT)</i><br>
         Davide Bleiner <i>(Swiss Federal Institute of Materials Science & Technology (Empa), CH)</i> <br>
         Damir Bosnar <i>(University of Zagreb, HR)</i><br>
